# pokemon_sv_damage_calc_mcp

./: CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: test_damage_calc.yml
src/: pokemon_damage_fastmcp_server.py
src/damage_calculator_api/: __init__.py  main.py
src/damage_calculator_api/calculators/: __init__.py  damage_calculator.py  stat_calculator.py  type_calculator.py
src/damage_calculator_api/models/: __init__.py  pokemon_models.py
src/damage_calculator_api/routers/: __init__.py  damage.py  info.py  pokemon.py
src/damage_calculator_api/schemas/: __init__.py  requests.py  responses.py
src/damage_calculator_api/utils/: data_loader.py  stat_calculator.py
tests/test_calculators/: __init__.py  test_damage_calculator.py
